# serpens

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
serpens/: api.py  cache.py  cache_async.py  cache_inmem.py  cloud_storage.py  compute_engine.py  csvutils.py  database.py  document.py  elastic.py  elastic_sanitize.py  envvars.py  financial.py  http_client.py  iam.py  initializers.py  lambda_function.py  log.py  messages.py  migrations.py  parameters.py  pubsub.py  rate_limit.py  rekognition.py  s3.py  schema.py  secrets.py  secrets_manager.py  sentry.py  settings.py  sns.py  sqs.py  storages.py  testgres.py  validators.py
serpens/database/: __init__.py  alembic.py  repository.py
tests/: __init__.py  test_api.py  test_cache.py  test_cache_async.py  test_cache_inmem.py  test_cloud_storage.py  test_compute_engine.py  test_csvutils.py  test_database.py  test_document.py  test_elastic.py  test_elastic_sanitize.py  test_envvars.env  test_envvars.py  test_financial.py  test_http_client.py  test_iam.py  test_initializers.py  test_lambda_function.py  test_messages.py  test_migrations.py  test_parameters.py  test_pubsub.py  test_rate_limit.py  test_rekognition.py  test_repository.py  test_s3.py  test_schema.py  test_secrets.py  test_secrets_manager.py  test_sentry.py  test_settings.py  test_sns.py  test_sqs.py  test_storage.py  test_testgres.py  test_validators.py
tests/fixtures/: fixtures.py
tests/samples/: fruits_iso8859.csv  fruits_utf8.csv  fruits_utf8bom.csv
(+2 files in other folders)
