[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "noverde-serpens"
version = "2.0.0"
description = "A set of Python utilities, recipes and snippets"
authors = [
    {name = "Noverde Developers", email = "dev@noverde.com.br"},
]
license = {text = "MIT"}
keywords = ["utilities", "aws"]
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
