[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "noverde-serpens"
version = "2.7.3"
description = "A set of Python utilities, recipes and snippets"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Noverde Developers", email = "dev@noverde.com.br"},
]
keywords = ["utilities", "aws"]
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
